# master-frontend-web

./: .prettierrc  README.md  angular.json  package-lock.json  package.json  test.html  test.js  tsconfig.json
projects/wasm-webtransport/: README.md  ng-package.json  package.json
projects/wasm-webtransport/src/: public-api.ts
projects/wasm-webtransport/src/lib/: wasm-webtransport.component.spec.ts  wasm-webtransport.component.ts  wasm-webtransport.service.spec.ts  (+1 more)
projects/wasm-webtransport/src/lib/wasm-webtransport/: Cargo.toml
projects/wasm-webtransport/src/lib/wasm-webtransport/pkg/: package.json  wasm_webtransport.d.ts  wasm_webtransport.js  wasm_webtransport_bg.wasm.d.ts
projects/wasm-webtransport/src/lib/wasm-webtransport/src/: lib.rs
src/: index.html  main.ts  styles.scss
src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.routes.ts
src/app/auth/: auth.component.html  auth.component.scss  auth.component.ts  auth.error.ts  auth.models.ts  auth.service.ts
src/app/board/: board.component.html  board.component.scss  board.component.ts
src/app/board-selection/: board-selection.component.html  board-selection.component.scss  board-selection.component.spec.ts  board-selection.component.ts
src/app/home/: home.component.html  home.component.ts
src/app/shared/: appbar.service.ts  board.service.ts  error.ts  snackbar-config.ts  user.service.ts
src/certificates/: public.pem
src/environments/: environment.dev.ts  environment.ts
src/styles/: colors.scss
tests/: create-test-users.js  test-canvas.spec.ts
(+27 files in other folders)
