[package]
name = "wasm-webtransport"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
#opt-level = 's'

[dependencies]
rxrust = "1.0.0-beta.8"
tokio = { version = "1.36.0", features = ["rt"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = "0.3.69"
xwt = "0.13.0"
