[package]
name = "wasm-webtransport"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
#opt-level = 's'

[dependencies]
# rxrust = "1.0.0-beta.8"
tokio = { version = "1.36.0", features = ["rt"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [ "WebTransport", "WebTransportOptions", "WebTransportHash", "console" ]}
js-sys = "0.3.69"
xwt-core = { version = "0.4.2", default-features = false }
# xwt-web-utils = "0.1.3"
# xwt-cert-utils = "0.1.0"
xwt-web-sys = { version = "0.11.0" }
serde_json = "1.0.118"
serde = { version = "1.0.203", features = [ "derive" ] }
serde-wasm-bindgen = "0.6.5"

[features]
default = []
web_sys_unstable_apis = []
